typescript/checker/tests/conformance/parser/ecmascript6/Iterators/parserForOfStatement20.ts.stderr
error: Unexpected initializer in for in/of loop
 --> $DIR/tests/conformance/parser/ecmascript6/Iterators/parserForOfStatement20.ts:2:10
  |
2 | for (var of = 0 in of) { }
  |          ^^

